<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.myanmar.obts.CalendarActivity"
    tools:showIn="@layout/activity_calendar">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:scrollbarStyle="outsideInset">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_single"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Single"
                android:enabled="false"/>

            <Button
                android:id="@+id/button_multi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Multi"/>

            <Button
                android:id="@+id/button_range"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Range"/>

            <Button
                android:id="@+id/button_display_only"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DisplayOnly"/>

            <Button
                android:id="@+id/button_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Dialog"/>

            <Button
                android:id="@+id/button_customized"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Customized"/>

            <Button
                android:id="@+id/button_decorator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Decorator"/>

            <Button
                android:id="@+id/button_rtl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RTL"/>
        </LinearLayout>
    </HorizontalScrollView>

    <com.squareup.timessquare.CalendarPickerView
        android:id="@+id/calendar_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp"
        android:scrollbarStyle="outsideOverlay"
        android:clipToPadding="false"
        android:background="#FFFFFF"
        />
    <Button
        android:id="@+id/done_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Done"
        />
</LinearLayout>
