<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/group_box_bold"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:focusable="true" android:focusableInTouchMode="true"
        android:layout_width="0px" android:layout_height="0px"/>

    <LinearLayout
        android:id="@+id/layoutTop"
        android:background="@drawable/group_box_bold"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:visibility="gone">

        <TextView
            android:id="@+id/txtContactDetailsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Contact Details"
            android:textStyle="bold" />

        <View
            android:id="@+id/layerSplitter2"
            android:layout_below="@+id/layerTitle"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@drawable/group_box_bold"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/txtContactEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="Email"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/txtContactMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="Mobile"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="false"
            android:text="@string/contact_note1"
            />
    </LinearLayout>

        <TableLayout android:layout_width="match_parent"
            android:layout_height="wrap_content" android:stretchColumns="1"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            >
            <TableRow>
                <TextView
                    android:id="@+id/txtContactTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Primary passenger"
                    android:layout_gravity="left"
                    android:textStyle="bold" />

                <TextView
                android:id="@+id/txtContactSeatNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                    android:layout_gravity="right"
                android:text="Seat"
                android:textStyle="bold" />
            </TableRow>
        </TableLayout>
        <View
            android:id="@+id/layerSplitter"
            android:layout_below="@+id/layerTitle"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@drawable/group_box_bold"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <EditText android:id="@+id/txtContactFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/enter_full_name"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <EditText android:id="@+id/txtContactAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/enter_age"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                />
        </android.support.design.widget.TextInputLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rdGender"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"/>

        </RadioGroup>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rdIDType"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/activity_horizontal_margin">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ictype"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/icnric"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/passport"/>
        </RadioGroup>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <EditText android:id="@+id/txtContactIDNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/icnumber"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            />
    </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="false"
            android:text="@string/contact_note2"
            />
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/layoutContactBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        >
        <CheckBox
            android:id="@+id/chkAgreement"
            android:singleLine="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terms_and_conditions"/>

        <Button
            android:id="@+id/btnBookingContinue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:text="@string/continue_booking"/>

    </LinearLayout>
</LinearLayout>